--- a/TryAccountingNote20210730/SystemAdmin/SystemAdmin.Master
+++ b/TryAccountingNote20210730/SystemAdmin/SystemAdmin.Master
@@ -12,7 +12,7 @@
         <table>
             <tr>
                 <td colspan="2">
-                    <h1>流水帳管理系統 - 後台</h1>
+                    <h1 style="color:brown">流水帳管理系統 - 後台</h1>
                 </td>
             </tr>
             <tr>
