--- a/TryAccountingNote20210730/SystemAdmin/SystemAdmin.Master
+++ b/TryAccountingNote20210730/SystemAdmin/SystemAdmin.Master
@@ -9,13 +9,17 @@
     <asp:ContentPlaceHolder ID="head" runat="server"></asp:ContentPlaceHolder>
     <style type="text/css">
         .auto-style1 {
-            width: 753px;
+            width: auto;
+            background-color:mediumturquoise;
         }
         .auto-style2 {
-            width: 118px;
+            width: auto;
+            background-color:aqua;
+
         }
         .auto-style3 {
-            width: 787px;
+            width: auto;
+            background-color:cyan
         }
     </style>
 </head>
@@ -24,7 +28,7 @@
         <table  style="width=100%;padding:10px;">
             <tr>
                 <td colspan="2">
-                    <h1 style="color:brown; text-align: right; padding-right: 0px;" class="auto-style1">流水帳管理系統 - 後台</h1>
+                    <h1 style="color:brown; text-align:center; padding-right: 0px;" class="auto-style1">流水帳管理系統 - 後台</h1>
                 </td>
             </tr>
             <tr>
@@ -39,7 +43,7 @@
                 </td>
                 <td style="padding:20px" class="auto-style3">
                     <!--這裡放主要內容-->
-                    <asp:ContentPlaceHolder ID="cphContent" runat="server"></asp:ContentPlaceHolder>
+                    <asp:ContentPlaceHolder ID="cphContent" runat="server" ></asp:ContentPlaceHolder>
                 </td>
             </tr>
         </table>
